--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "wfquery",
+  "version": "0.6.0",
   "description": "like jQuery but just for new browser",
   "main": "amd/wfquery.js",
   "authors": [
